# jpm

./: .gitignore  BuildConfig.cfg  BuildConfig.java  JPMSource.json  README.md  manual-build.sh
.jpm/: manifest.xml
aosp/src/com/jpm/plugin/aosp/: AOSP.java
aosp/src/com/jpm/plugin/aosp/download/: AOSPDownload.java
aosp/src/com/jpm/plugin/aosp/manifest/: JpmManifest.java  XmlManifest.java
commons/src/com/jpm/commons/: AdminCheck.java  AdministratorException.java  ResourceManager.java
commons/src/com/jpm/commons/process/: ProcessData.java  ProcessInfo.java
commons/src/com/jpm/commons/utils/: OperatingSystem.java  RuntimeEnvironment.java  SizeConvert.java  StringGenerator.java  Utility.java
commons/src/com/jpm/commons/utils/io/: FileUtil.java  Partition.java  UnixPartition.java
jpm-natives/: CMakeLists.txt
jpm-natives/src/: AdminCheck.cpp
packaging/: .gitignore
packaging/resources/: remote.list.json  settings.cfg
packaging/resources/.cache/remotes/: GitHub-jpm.json
packaging/resources/remote.list.d/: extras.list.json
sample-package/: cmdline  install.bat  install.sh  package.cfg
src/com/bc100dev/jpm/: BuildConfig.cfg  BuildConfig.java  JPMConstants.java  MainClass.java
src/com/bc100dev/jpm/download/: DownloadBuilder.java  DownloadManager.java
src/com/bc100dev/jpm/pkg/: JPMExtractor.java  JPMPackage.java
src/com/bc100dev/jpm/plugin/: Plugin.java  PluginManager.java
src/com/bc100dev/jpm/remote/: RemoteSource.java  Remotes.java
src/com/bc100dev/jpm/remote/github/: GithubRemote.java
updater/src/com/jpm/updater/: UpdaterMainClass.java
